crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_wrong_prophecy_contract.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
expression: snapshot_output(output)
---
status: Some(1)
stdout:
FAIL set_to_two
  mutable reference close failed
  src/main.rs:5:2: 5:2
PASS main
  all assertions discharged

stderr:
