crates/tsuno-driver/tests/fixtures/snapshots/fail/reports_failing_assertion.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 85
expression: snapshot_output(output)
---
status: Some(1)
stdout:
FAIL bad
  assertion failed
  src/main.rs:2:1: 2:21
PASS main
  all assertions discharged

stderr:
