crates/tsuno-driver/tests/fixtures/snapshots/fail/solver_returns_unknown.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 85
expression: snapshot_output(output)
---
status: Some(1)
stdout:
UNKNOWN solver_returns_unknown
  solver returned unknown while checking assertion
  src/main.rs:10:6: 10:6
PASS main
  all assertions discharged

stderr:
