crates/tsuno-driver/tests/fixtures/snapshots/fail/supports_mut_ref_to_vec_of_mut_refs.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 85
expression: snapshot_output(output)
---
status: Some(1)
stdout:
FAIL supports_mut_ref_to_vec_of_mut_refs
  mutable reference close failed
  src/main.rs:1:67: 1:67
PASS main
  all assertions discharged

stderr:
