crates/tsuno-driver/tests/fixtures/snapshots/fail/supports_struct_field_access_in_contract.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 85
expression: snapshot_output(output)
---
status: Some(1)
stdout:
FAIL supports_struct_field_access_in_contract
  postcondition failed
  src/main.rs:9:1: 9:30
PASS main
  all assertions discharged

stderr:
