crates/tsuno-driver/tests/fixtures/snapshots/fail/supports_vec_alias.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 85
expression: snapshot_output(output)
---
status: Some(1)
stdout:
FAIL supports_vec_alias
  mutable reference close failed
  src/main.rs:3:44: 3:45
PASS main
  all assertions discharged

stderr:
