crates/tsuno-driver/tests/fixtures/snapshots/fail/supports_vec_of_mut_refs.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 85
expression: snapshot_output(output)
---
status: Some(1)
stdout:
FAIL supports_vec_of_mut_refs
  mutable reference close failed
  src/main.rs:1:50: 1:51
PASS main
  all assertions discharged

stderr:
