crates/tsuno-driver/tests/fixtures/snapshots/fail/tracks_mut_ref_final_value_in_contract.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 85
expression: snapshot_output(output)
---
status: Some(1)
stdout:
FAIL set_to_two
  postcondition failed
  src/main.rs:3:1: 3:21
PASS main
  all assertions discharged

stderr:
