crates/tsuno-driver/tests/fixtures/snapshots/fail/trusts_callee_contract.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 85
expression: snapshot_output(output)
---
status: Some(0)
stdout:
PASS caller
  all assertions discharged
FAIL callee
  postcondition failed
  src/main.rs:10:1: 10:22
PASS main
  all assertions discharged

stderr:
